# musicTest

./: .gitignore  LICENSE  pyproject.toml
api/: .env.example  .gitignore  README.md  config.py  magenta_continuator.py  main.py  post_processing.py  primer_generator.py  requirements-magenta.txt  requirements.txt
api /: .env.example  .gitignore  config.py  main.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  BottomBar.tsx  MainWorkspace.tsx  PianoRollView.tsx  StepSequencerView.tsx  TrackBrowserModal.tsx  TransportBar.tsx
frontend/hooks/: useInstruments.ts  usePlayback.ts
frontend/nextbeat/: package-lock.json  package.json  plan.md
frontend/nextbeat/app/: page.tsx
frontend/nextbeat/components/: AgentPanel.tsx  MainWorkspace.tsx  PianoRollView.tsx  PlaylistView.tsx  TrackBrowserModal.tsx  TrackSettingsMenu.tsx  TransportBar.tsx
frontend/nextbeat/hooks/: useInstruments.ts  useKeyboardShortcuts.ts  usePlayback.ts
frontend/nextbeat/stores/: projectStore.ts
frontend/nextbeat/types/: project.ts
frontend/nextbeat/utils/: agentClient.ts
frontend/stores/: projectStore.ts
frontend/types/: project.ts
frontend/utils/: agentClient.ts  instruments.ts  midiExport.ts
